Bug 391156 - mozStorage doesn't handle unicode in LIKE, UPPER, or LOWER functions (string nit follow-up patch).  r=sspitzer